# Rwal

./: .clang-format  .clang-format.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  Dockerfile.base  Dockerfile.dev  Installation.md  LICENSE.txt  README.md  SECURITY.md  build.ps1  build.py  docker-compose.yml  docker-entrypoint-dev.sh  logs.txt  main  main.cpp  setup-linux.sh  setup.py  setup.sh  wallpaper.h
.cache/clangd/index/: AppController.cpp.9900DBA7D92AC9DB.idx  AppController.hpp.3150B86DB36EED6F.idx  AppController.moc.7DEA1EA2B1AAC20F.idx  CLI.cpp.575E6E9EDA1AC75D.idx  CLI.h.6BD4D90A48E4C3DB.idx  CurlWrapper.cpp.760EEBFE577D256C.idx  CurlWrapper.h.3EB55925D41AB639.idx  CurlWrapper.hpp.DCB861FC94321887.idx  GlobalConstans.h.653CB69D609FF2D7.idx  GlobalConstans.hpp.BB9849AD82DF3F79.idx  Menus.cpp.821C26560194ADED.idx  Menus.h.73FBA846221AE0DC.idx  NetworkManager.cpp.C335435741757ECF.idx  NetworkManager.h.F0A05C4009D9429D.idx  NetworkManager.hpp.9A34479C1E25609B.idx  PlasmaDBus.cpp.8724E2A49F4D6237.idx  PlasmaDBus.h.44F12F38B596138F.idx  PlasmaDBus.hpp.2F7704C6C76ACF3B.idx  QDBusConnection.0428AAE20930E182.idx  QDBusMessage.22C6AC078FBE7CF7.idx  QFileInfo.27AB7FA944593CEA.idx  QFileSystemWatcher.4E94FE9E42145EE7.idx  QSocketNotifier.DE400CF38A0ED997.idx  QStandardPaths.A31C4FD51B2DE94D.idx  WallpaperManager.cpp.63DD9E136A996B21.idx  WallpaperManager.h.43D632B99CC87235.idx  WallpaperManager.hpp.61AA7931700D9335.idx  abi_macros.hpp.3649F89464DABFD4.idx  adl_serializer.hpp.01ACAF03C165BE92.idx  alloc_traits.h.0E76F588BE260167.idx  allocated_ptr.h.4148ABB3721C53A4.idx  any.5029BD74C156B5CB.idx  array.E14CEE433EA69F2E.idx  atomic.59AB8B52BBD3522B.idx  atomic_base.h.A7982DBD7A7168C3.idx  atomic_wait.h.CD0B70038949E6F7.idx  auto_ptr.h.5555BD1624B2338C.idx  basic_ios.h.AF86E13E7CF08519.idx  basic_ios.tcc.9EF7CF8B1B65B55C.idx  basic_string.h.144678BE22AF041D.idx  (+272 more)
.github/workflows/: release.yml
assets/videos/: Kooha-2025-09-20-11-26-43.webm  changeModeVideo.webm  interactiveModeVideo.webm
cmake/: description-full.txt  description.txt
deploy/: Dockerfile  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh
docs/: Configuration.md  DOCUMENTATION.md  FlowGraphs  FlowGraphs.md  Ideas.md  Installation.md  PHILOSOPHY.md  PHISOLOPHY.md  Philosophy.md  ROADMAP.md  Roadmap.md  SupportedDE.md  Usage.md
scripts/: setup-linux.sh  setup-windows.ps1
src/: funcs.cpp  funcs.h  main.cpp
src/AppController/: AppController.cpp  AppController.hpp
src/Application/: Application.cpp  Application.hpp
src/CLI/: CLI.cpp  CLI.h  Menus.cpp  Menus.h
src/application/: Application.cpp
src/config/: Config.cpp  Config.hpp  IConfigReader.hpp  ValidatorRegistry.hpp  Validators.hpp
src/dbus/: PlasmaDBus.cpp  PlasmaDBus.h  PlasmaDBus.hpp
src/funcs/: Funcs.cpp  funcs.cpp  funcs.h  funcs.hpp
src/internal/: AppConfig.h.in  AppConstants.hpp  GlobalConstans.h  GlobalConstans.hpp
src/internal/filesystem/: CMakeLists.txt  FileSystemFactory.cpp  FileSystemFactory.hpp  IFileSystem.hpp  LinuxFileSystem.cpp  LinuxFileSystem.hpp  NativeFileSystem.cpp  NativeFileSystem.hpp  WindowsFileSystem.cpp  WindowsFileSystem.hpp  platform_detect.hpp
src/internal/platform/: EnvUtils.cpp  env_utils.cpp  env_utils.hpp
src/internal/utils/: StringUtils.cpp  StringUtils.hpp  VectorUtils.hpp  string_utils.cpp  string_utils.hpp  vector_utils.hpp
src/keywords/: Keywords.cpp  Keywords.hpp  keywords.cpp  keywords.h  keywords.hpp
src/logs/: LogModule.hpp  LogType.hpp  Logs.cpp  Logs.hpp  logs.cpp  logs.h  logs.hpp
src/navigator/: Navigator.cpp  Navigator.hpp  navigator.cpp  navigator.h  navigator.hpp
src/net/: CurlWrapper.cpp  CurlWrapper.h  CurlWrapper.hpp  NetworkManager.cpp  NetworkManager.h  NetworkManager.hpp
src/settings/: CMakeLists.txt  IConfigReader.hpp  ISystemSchedule.hpp  ISystemScheduler.hpp  LinuxSystemSchedul.hpp  LinuxSystemSchedule.cpp  LinuxSystemSchedule.hpp  LinuxSystemScheduler.cpp  LinuxSystemScheduler.hpp  NullSystemSchedule.hpp  NullSystemScheduler.hpp  ScheduleFactory.cpp  ScheduleFactory.hpp  ScheduleTypes.hpp  SchedulerFactory.cpp  SchedulerFactory.hpp  SchedulerTypes.hpp  WindowsSystemSchedule.cpp  WindowsSystemSchedule.hpp  WindowsSystemScheduler.cpp  WindowsSystemScheduler.hpp  config.cpp  config.h  config.hpp  settings.cpp  settings.h  settings.hpp
src/startup_flows/: startup_flows.cpp  startup_flows.h
src/ui/: IUserInterface.hpp
src/ui/cli/: CLI.hpp  CLIHandlers.cpp  CLIParser.cpp  CommandLineHandlers.cpp  CommandLineHandlers.hpp  CommandLineParser.cpp  CommandLineParser.hpp  UIManager.cpp  UIManager.hpp  cli.cpp  cli.h  cli.hpp  main_cli.cpp
src/ui/io/: io.cpp  io.h  io.hpp
src/ui/menus/: menu_ids.hpp  menus.cpp  menus.h  menus.hpp
src/ui/tui/: TUIManager.cpp  TUIManager.hpp  main_tui.cpp
src/ui/tui/menus/: Menus.cpp  Menus.hpp  menu_ids.hpp  menus.cpp  menus.hpp
src/wallpaper/: CMakeLists.txt  IWallpaperSetter.hpp  PathResolver.cpp  PathResolver.hpp  WallpaperFactory.cpp  WallpaperFactory.hpp  WallpaperManager.cpp  WallpaperManager.h  WallpaperManager.hpp
tests/: mocks.hpp  test_random.cpp  test_string_utils.cpp
tests/mocks/: MockConfig.hpp  MockConfigReader.hpp  MockCurlWrapper.hpp  MockFileSystem.hpp  MockIWallpaperSetter.hpp  MockKeywords.hpp  MockLogs.hpp  MockNetworkManager.hpp  MockTUIManager.hpp  MockUIManager.hpp  mocks.hpp
tests/unit/: test_config.cpp  test_keywords.cpp  test_random.cpp  test_string_utils.cpp  test_wallpaper_manager.cpp
tests/units/: test_string_utils.cpp
